# abs-software

./: .gitignore  CODING_STYLE  CODING_STYLE.md  CONTRIBUTE.md  LICENSE  Makefile  README.md  configure  configure.ac  prova.html  test.sh
Detection/: detection.h  detection.h~
Velocity/: Makefile  README.md  main.cpp  makefile  velocity.cpp  velocity.h
doc/: .gitignore  Makefile
doc/firmware/: Makefile  firmware.tex
doc/sdb_libs/: Makefile  sdb_libs.tex
doc/sdb_mcs/: Makefile  sdb_mcs.tex
global_task_scheduler/: library.c  library.h  main.c
json_translator/: json_example_complete.json  jt.json  mcs_conf_file.json  printed.c  single_payload.json  single_state.json  test.c  test_complete.c  test_single.c  tr_main_test.c
src/: .gitignore  Makefile  Makefile.am
src/Android/PayloadSDK (native)/: gradle.properties  settings.gradle
src/Android/PayloadSDK(native)/: build.gradle  proguard-rules.pro
src/Architecture/: Makefile  Makefile.am  Makefile.inc  mcs.json
src/Architecture/Include/: abs.h  abs_test.h  mcs.h  sdb.h  sdb_group.h
src/Architecture/Libraries/: Makefile
src/Architecture/MCS/: Makefile  mcs.c  mcs.h  mcs.json  mcs_printed.c  mcs_test.c  mcsg.c  mcsg.h  mcsg.json  mcsg_java_printed.java  mcsg_json_commands.json  mcsg_printed.c  mcsgen.c  mcsgen.h
src/Architecture/SDB/: Makefile  Makefile.am  makefile  sdb.c  sdb_director.c  sdb_dummy.c  sdb_dummy.h  sdb_module.c  sdb_observer.c  sdb_private.h  sdb_qos.c  sdb_queue.c  sdb_usb.c  sdb_usb.h  usb_queue.c  usb_queue.h
src/Architecture/SatTracker/: .gitignore
src/Architecture/Scheduler/: Makefile  shed.c  shed_local.c  shed_mat.c  shed_mat.h
src/Architecture/Test/: Makefile  mcs.c
src/Architecture/appmods/: appmod.c  appmod.h  assets.c  assets.h
src/Architecture/include/: abs.h  mcs.h  sdb.h
src/Arduino/abs/: abs.h  abs.ino  assets.ino
src/Arduino/comms/: README_comms.md  comms.cpp  comms.h  hdlc.cpp  hdlc.h
src/Arduino/comms_test/: assets.ino  comms_test.h  comms_test.ino
src/Arduino/test/: firmware.c  (+2 more)
testing_app/abs-release/: abs-release.aar  build.gradle
testing_app/app/: build.gradle
(+164 files in other folders)
